--- a/AbysmalLightScoreTracker/Properties/Resources.resx
+++ b/AbysmalLightScoreTracker/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="battle_net___icon_by_blagoicons-daew2bl" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\battle_net___icon_by_blagoicons-daew2bl.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="687474703a2f2f692e696d6775722e636f6d2f67777048614a332e706e67" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\687474703a2f2f692e696d6775722e636f6d2f67777048614a332e706e67.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,7 +133,7 @@
   <data name="xboxlive_rgb_stacked_2013" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\xboxlive_rgb_stacked_2013.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="battle_net___icon_by_blagoicons-daew2bl" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\battle_net___icon_by_blagoicons-daew2bl.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="PC_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PC_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
